--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.2.5.RELEASE'
 // https://mvnrepository.com/artifact/com.alibaba/fastjson
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.66'
-
+    compile 'org.pegdown:pegdown:1.6.0'
     compile group: 'org.elasticsearch.client', name: 'elasticsearch-rest-client', version: '7.6.0'
 
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.6.0'
